--- a/index.html
+++ b/index.html
@@ -1699,7 +1699,8 @@ if (dateInput) {
         <i class="fa-solid fa-laptop-code text-4xl text-gray-200"></i>
     </div>
 
-</div> ```        </main>
+</div> 
+    </main>
 
         <!-- Modals 樣式優化 -->
         <div id="addItineraryModal" class="fixed inset-0 bg-gray-900/60 backdrop-blur-sm hidden items-center justify-center z-50 p-4" onclick="window.closeModal('addItineraryModal')">
@@ -1856,8 +1857,4 @@ if (dateInput) {
         </div>
     </div>
 
-    <div id="spots-container" class="space-y-4">
-        </div>
-</div>
-
-
+    
