--- a/index.html
+++ b/index.html
@@ -1844,7 +1844,7 @@ if (dateInput) {
     </form>
   </div>
 </div>
-<<div id="overview-tab" class="main-tab-content hidden p-4">
+<div id="overview-tab" class="main-tab-content hidden p-4">
     <div class="bg-white rounded-3xl p-6 shadow-sm border border-pink-100 mb-6">
         <h2 class="text-lg font-bold mb-4 text-gray-700">新增想去地點</h2>
         <div class="space-y-3">
