--- a/index2.html
+++ b/index2.html
@@ -1331,19 +1331,13 @@ if (dateInput) {
     dateInput.value = today;
 }
     </script>
-</head>
-
 <head>
-    
-<head>
-   
-<head>
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="My Travel">
-    <link rel="apple-touch    <link rel="apple-touchcontent.com/babys115/hashTravel--planner/main/hotel.png
-    <title>My Travel</title>
-
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-title" content="My Travel">
+<!-- iOS 主畫面圖標 -->
+<link rel="apple-touch-icon" href="https://raw.githubusercontent.com/babys115-hash/Travel--planner/main/hotel.png">
+<title>My Travel</title>
 
 
     <div class="max-w-xl mx-auto bg-white min-h-screen shadow-2xl overflow-hidden rounded-none sm:rounded-3xl sm:my-8 border border-gray-100">
