--- a/index2.html
+++ b/index2.html
@@ -1391,7 +1391,7 @@ if (dateInput) {
     </script>
 <head>
 <meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
 <meta name="apple-mobile-web-app-title" content="My Travel">
 <!-- iOS 主畫面圖標 -->
 <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/babys115-hash/Travel--planner/main/luggage.png">
