--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
@@ -1388,8 +1389,13 @@ if (dateInput) {
     dateInput.value = today;
 }
     </script>
-</head>
-<body class="bg-gray-50 font-sans">
+<head>
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
+<meta name="apple-mobile-web-app-title" content="My Travel">
+<!-- iOS 主畫面圖標 -->
+<link rel="apple-touch-icon" href="https://raw.githubusercontent.com/babys115-hash/Travel--planner/main/luggage.png">
+<title>My Travel</title>
 
     <div class="max-w-xl mx-auto bg-white min-h-screen shadow-2xl overflow-hidden rounded-none sm:rounded-3xl sm:my-8 border border-gray-100">
 
