--- a/index.html
+++ b/index.html
@@ -684,11 +684,11 @@
                             <div class="p-3 bg-white shadow-sm rounded-2xl"><p class="mb-1 text-xs text-gray-400">已支出</p><p class="text-lg font-bold text-custom-danger">$ <span id="total-spent">0</span></p></div>
                             <div class="p-3 bg-white shadow-sm rounded-2xl border-2 border-blue-100">
     <p class="mb-1 text-sm font-bold text-blue-400">Josh 付</p>
-    <p class="text-2xl font-bold text-gray-700">$ <span id="josh-paid">0</span></p>
+    <p class="text-sm font-bold text-gray-400">$ <span id="josh-paid">0</span></p>
 </div>
 <div class="p-3 bg-white shadow-sm rounded-2xl border-2 border-pink-100">
     <p class="mb-1 text-sm font-bold text-pink-400">Candice 付</p>
-    <p class="text-2xl font-bold text-gray-700">$ <span id="candice-paid">0</span></p>
+    <p class="text-sm font-bold text-gray-400">$ <span id="candice-paid">0</span></p>
 </div>
                         </div>
                         <div class="p-2 text-center bg-white border-t border-blue-100 rounded-xl"><p class="mb-1 text-xs text-gray-400">應付結算</p><p id="settlement-result" class="text-lg font-bold text-gray-700">計算中...</p></div>
