--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@
             <!-- 3. 慾望清單 TAB -->
             <div id="wishlist-tab" class="main-tab-content hidden p-4">
                 <div class="p-6 mb-6 bg-white border-2 border-pink-100 shadow-lg rounded-3xl">
-                    <h3 class="flex items-center mb-4 text-xl font-bold text-gray-700"><i class="mr-2 fa-solid fa-cart-plus text-custom-primary"></i> 新增採購清單</h3>
+                    <h3 class="flex items-center mb-4 text-xl font-bold text-gray-700"><i class="mr-2 fa-solid fa-cart-plus text-custom-primary"></i> 新增慾望</h3>
                     <form onsubmit="window.addWishlistItem(event)" id="wishlist-form">
                         <input type="text" id="wishlist-name" placeholder="商品名稱" class="w-full p-3 mb-3 border-0 bg-gray-50 rounded-xl" required>
                         <div class="flex gap-2 mb-3">
