--- a/index.html
+++ b/index.html
@@ -778,7 +778,28 @@
                 <label class="block mb-2 text-sm font-bold">用途</label><input type="text" id="edit-expense-description" class="w-full p-3 bg-gray-50 border-0 rounded-xl mb-4">
                 <div class="grid grid-cols-2 gap-4 mb-4">
                     <div><label class="block mb-2 text-sm font-bold">付款人</label><div id="edit-expense-payer-select" class="flex gap-1"><button type="button" class="block-select-btn !text-xs !p-1 !m-0 !flex-1" data-payer="Josh" onclick="window.selectEditPayer('Josh')">Josh</button><button type="button" class="block-select-btn !text-xs !p-1 !m-0 !flex-1" data-payer="Candice" onclick="window.selectEditPayer('Candice')">Candice</button></div><input type="hidden" id="edit-expense-payer"></div>
-                    <div><label class="block mb-2 text-sm font-bold">方式</label><div id="edit-expense-payment-select" class="flex gap-1"><button type="button" class="block-select-btn !text-xs !p-1 !m-0 !flex-1" data-payment="Cash" onclick="window.selectEditPayment('Cash')">現金</button><button type="button" class="block-select-btn !text-xs !p-1 !m-0 !flex-1" data-payment="Card" onclick="window.selectEditPayment('Card')">信用卡</button></div><input type="hidden" id="edit-expense-payment"></div>
+                  <button type="button"
+        class="block-select-btn !text-xs !p-1 !m-0 !flex-1"
+        data-payment="Cash"
+        onclick="window.selectEditPayment('Cash')">
+  現金
+</button>
+
+<button type="button"
+        class="block-select-btn !text-xs !p-1 !m-0 !flex-1"
+        data-payment="Card"
+        onclick="window.selectEditPayment('Card')">
+  信用卡
+</button>
+
+<button type="button"
+        class="block-select-btn !text-xs !p-1 !m-0 !flex-1"
+        data-payment="PayPay"
+        onclick="window.selectEditPayment('PayPay')">
+  PayPay
+</button>
+
+<input type="hidden" id="edit-expense-payment">
                 </div>
                 <label class="block mb-2 text-sm font-bold">類別</label><div id="edit-expense-category-select" class="grid grid-cols-3 gap-2 mb-6"><button type="button" class="block-select-btn !text-xs !p-1 !m-0" data-category="Food" onclick="window.selectEditCategory('Food')">餐飲</button><button type="button" class="block-select-btn !text-xs !p-1 !m-0" data-category="Transport" onclick="window.selectEditCategory('Transport')">交通</button><button type="button" class="block-select-btn !text-xs !p-1 !m-0" data-category="Accommodation" onclick="window.selectEditCategory('Accommodation')">住宿</button><button type="button" class="block-select-btn !text-xs !p-1 !m-0" data-category="Shopping" onclick="window.selectEditCategory('Shopping')">購物</button><button type="button" class="block-select-btn !text-xs !p-1 !m-0" data-category="Ticket" onclick="window.selectEditCategory('Ticket')">門票</button><button type="button" class="block-select-btn !text-xs !p-1 !m-0" data-category="Other" onclick="window.selectEditCategory('Other')">其他</button></div><input type="hidden" id="edit-expense-category">
                 <div class="flex justify-end gap-2 mt-4"><button type="button" onclick="window.closeModal('editExpenseModal')" class="px-4 py-2 bg-gray-100 rounded-xl font-bold">取消</button><button type="submit" class="px-6 py-2 bg-custom-primary text-white rounded-xl font-bold shadow-md">儲存修改</button></div>
