--- a/index.html
+++ b/index.html
@@ -340,12 +340,12 @@
         // 類別名稱對照表
         const categoryNameMap = {
             Food: '餐飲', Transport: '交通', Accommodation: '住宿',
-            Shopping: '購物', Ticket: '門票', Other: '其他'
+            Shopping: '購物', Ticket: '門票', Other: '其他', Purchasing: '代購'
         };
 
         list.innerHTML = data.map(e => {
             const twd = e.currency==='JPY' ? Math.round(e.amount*EXCHANGE_RATE_JPY_TWD) : e.amount;
-            const iconMap = { Food: 'fa-utensils', Transport: 'fa-train', Accommodation: 'fa-bed', Shopping: 'fa-bag-shopping', Ticket: 'fa-ticket', Other: 'fa-shapes' };
+            const iconMap = { Food: 'fa-utensils', Transport: 'fa-train', Accommodation: 'fa-bed', Shopping: 'fa-bag-shopping', Ticket: 'fa-ticket', Other: 'fa-shapes', Purchasing: 'fa-cart-plus' };
             const imageHtml = e.imageUrl ? `<img src="${e.imageUrl}" class="w-12 h-12 object-cover rounded-lg mr-3 border border-gray-200 cursor-pointer" onclick="event.stopPropagation(); window.openImagePreview(this.src)">` : `<div class="w-12 h-12 rounded-full bg-pink-100 flex items-center justify-center mr-3 text-custom-primary"><i class="fa-solid ${iconMap[e.category]||'fa-circle'}"></i></div>`;
             
             // 顯示中文類別
@@ -718,6 +718,7 @@
                             <button type="button" class="w-full block-select-btn !m-0" data-category="Shopping" onclick="window.selectCategory('Shopping')">購物</button>
                             <button type="button" class="w-full block-select-btn !m-0" data-category="Ticket" onclick="window.selectCategory('Ticket')">門票</button>
                             <button type="button" class="w-full block-select-btn !m-0" data-category="Other" onclick="window.selectCategory('Other')">其他</button>
+                            <button type="button" class="w-full block-select-btn !m-0" data-category="Purchasing" onclick="window.selectCategory('Purchasing')">代購</button> <!-- 新增代購 -->
                             <input type="hidden" id="expense-category" value="Food">
                         </div>
                         <label class="block mb-2 text-sm font-bold text-gray-500">支付</label>
@@ -835,7 +836,7 @@
                         <input type="text" id="new-spot-desc" placeholder="簡單附註 (選填)" class="w-full p-3 border-2 border-gray-100 bg-gray-50 rounded-xl focus:border-pink-300">
                         <input type="text" id="new-spot-link" placeholder="Google Map 連結" class="w-full p-3 border-2 border-gray-100 bg-gray-50 rounded-xl focus:border-pink-300">
                         <input type="file" id="spot-camera-input" accept="image/*" class="hidden" onchange="window.previewImage(this)"><button type="button" onclick="document.getElementById('spot-camera-input').click()" class="w-full p-3 font-bold text-gray-500 bg-gray-100 rounded-xl transition hover:bg-gray-200"><i class="fa-solid fa-camera"></i> 點我拍照或選照片</button>
-                        <div id="photo-preview-container" class="relative hidden"><img id="photo-preview" src="" class="object-cover w-full h-40 border-2 border-gray-200 rounded-xl"><button type="button" onclick="window.clearPhoto()" class="absolute top-2 right-2 flex items-center justify-center w-7 h-7 text-white bg-red-400 rounded-full shadow"><i class="fa-solid fa-xmark"></i></button></div>
+                        <div id="photo-preview-container" class="relative hidden mt-1"><img id="photo-preview" src="" class="object-cover w-full h-40 border-2 border-gray-200 rounded-xl cursor-pointer hover:opacity-80 transition" onclick="window.open(this.src, '_blank')" title="點擊查看原圖"><button type="button" onclick="window.clearPhoto()" class="absolute top-2 right-2 flex items-center justify-center w-7 h-7 text-white bg-red-400 rounded-full shadow top-2 right-2"><i class="fa-solid fa-xmark"></i></button></div>
                         <button onclick="window.addSpot()" id="add-spot-btn" class="w-full p-3 font-bold text-white bg-[#FF8BA7] rounded-xl shadow-md active:scale-95">新增景點</button>
                     </div>
                 </div>
@@ -924,6 +925,7 @@
                     <button type="button" class="block-select-btn !text-xs !p-1 !m-0" data-category="Shopping" onclick="window.selectEditCategory('Shopping')">購物</button>
                     <button type="button" class="block-select-btn !text-xs !p-1 !m-0" data-category="Ticket" onclick="window.selectEditCategory('Ticket')">門票</button>
                     <button type="button" class="block-select-btn !text-xs !p-1 !m-0" data-category="Other" onclick="window.selectEditCategory('Other')">其他</button>
+                    <button type="button" class="block-select-btn !text-xs !p-1 !m-0" data-category="Purchasing" onclick="window.selectEditCategory('Purchasing')">代購</button>
                 </div>
                 <input type="hidden" id="edit-expense-category">
                 <input type="file" id="edit-expense-file" accept="image/*" class="hidden" onchange="window.previewEditExpenseImage(this)">
@@ -951,7 +953,7 @@
                 <div id="edit-photo-preview-container" class="relative hidden mb-3"><img id="edit-photo-preview" src="" class="object-cover w-full h-40 border border-gray-200 rounded-xl"></div>
                 <button type="button" onclick="document.getElementById('edit-spot-file').click()" class="flex items-center justify-center w-full gap-2 p-2 mb-2 text-sm font-bold text-pink-500 transition border border-pink-100 bg-pink-50 rounded-xl hover:bg-pink-100"><i class="fa-solid fa-camera"></i> 更換照片</button>
                 <input type="file" id="edit-spot-file" accept="image/*" class="hidden" onchange="window.previewEditImage(this)">
-                <button type="submit" id="save-spot-btn" class="w-full p-3 mt-4 font-bold text-white transition shadow-lg bg-custom-secondary rounded-2xl hover:opacity-90">儲存修改</button>
+                <button type="submit" id="save-spot-btn" class="w-full p-3 mt-4 font-bold text-white shadow-lg bg-custom-secondary rounded-2xl hover:opacity-90">儲存修改</button>
             </form>
         </div>
     </div>
@@ -994,7 +996,7 @@
                 </button>
                 <input type="file" id="edit-wishlist-file" accept="image/*" class="hidden" onchange="window.previewEditWishlistImage(this)">
 
-                <button type="submit" id="save-wishlist-btn" class="w-full p-3 mt-4 font-bold text-white transition shadow-lg bg-custom-secondary rounded-2xl hover:opacity-90">儲存修改</button>
+                <button type="submit" id="save-wishlist-btn" class="w-full p-3 mt-4 font-bold text-white shadow-lg bg-custom-secondary rounded-2xl hover:opacity-90">儲存修改</button>
             </form>
         </div>
     </div>
@@ -1023,7 +1025,7 @@
                     <i class="absolute top-4 right-4 text-gray-400 fa-solid fa-chevron-down pointer-events-none"></i>
                 </div>
 
-                <button type="submit" id="save-packing-btn" class="w-full p-3 mt-4 font-bold text-white transition shadow-lg bg-custom-secondary rounded-2xl hover:opacity-90">儲存修改</button>
+                <button type="submit" id="save-packing-btn" class="w-full p-3 mt-4 font-bold text-white shadow-lg bg-custom-secondary rounded-2xl hover:opacity-90">儲存修改</button>
             </form>
         </div>
     </div>
