--- a/index.html
+++ b/index.html
@@ -1466,7 +1466,7 @@
             <header class="flex justify-between items-center mb-8 mt-4">
                 <h1 class="text-2xl font-bold text-gray-800 tracking-wide flex items-center">
                     <i class="fa-solid fa-map-location-dot text-custom-primary mr-3 text-3xl"></i>
-                    My History
+                    My Trip History
                 </h1>
             </header>
             <div id="trip-list-container"></div>
