--- a/index.html
+++ b/index.html
@@ -1871,14 +1871,14 @@
                             </p>
                         </div>
                     </div>
-                    <div class="bg-white p-6 rounded-3xl shadow-sm border border-blue-100 mb-6 relative">
+                   <div class="bg-white p-4 sm:p-6 rounded-3xl shadow-sm border border-blue-100 mb-6 relative">
                         <h3 class="font-bold text-gray-700 mb-4 flex items-center">
                             <i class="fa-solid fa-user-group text-blue-400 text-xl mr-2"></i>
                             旅伴設定
                         </h3>
                         <div class="flex gap-2 mb-3">
-                            <input type="text" id="new-participant-name" placeholder="輸入名字..." class="flex-1 p-3 bg-blue-50 border-0 rounded-xl font-bold outline-none">
-                            <button onclick="window.addParticipant()" class="w-12 bg-blue-400 text-white font-bold rounded-xl shadow-md">
+                            <input type="text" id="new-participant-name" placeholder="輸入名字..." class="flex-1 min-w-0 p-3 bg-blue-50 border-0 rounded-xl font-bold outline-none">
+                            <button onclick="window.addParticipant()" class="w-12 flex-shrink-0 flex items-center justify-center bg-blue-400 text-white font-bold rounded-xl shadow-md">
                                 <i class="fa-solid fa-plus"></i>
                             </button>
                         </div>
